注册机修改，光线盒子重置

--- a/PM-Register/Keygen/keygen.ui
+++ b/PM-Register/Keygen/keygen.ui
@@ -42,26 +42,30 @@
         <string>授权文件</string>
        </property>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_5">
+        <item row="2" column="1" colspan="4">
+         <widget class="QTextEdit" name="actiCodeText">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label_6">
           <property name="font">
            <font>
             <pointsize>11</pointsize>
            </font>
           </property>
           <property name="text">
-           <string>授权文件：</string>
+           <string>校验开关：</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="0" column="1" colspan="4">
-         <widget class="QLineEdit" name="lineEditFilePath">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
+        <item row="4" column="1" colspan="2">
+         <widget class="QDateEdit" name="dateEditExpire">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -72,6 +76,24 @@
            <font>
             <pointsize>11</pointsize>
            </font>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="4">
+         <widget class="QPushButton" name="tiralBtn">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>11</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>试用100天</string>
           </property>
          </widget>
         </item>
@@ -93,6 +115,28 @@
           </property>
          </widget>
         </item>
+        <item row="1" column="1" colspan="4">
+         <widget class="QTextEdit" name="Sntext">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="font">
+           <font>
+            <pointsize>11</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>到期时间：</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label">
           <property name="font">
@@ -108,6 +152,20 @@
           </property>
          </widget>
         </item>
+        <item row="5" column="2">
+         <widget class="QRadioButton" name="verOffBtn">
+          <property name="text">
+           <string>校验关闭</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QRadioButton" name="verOnBtn">
+          <property name="text">
+           <string>校验开启</string>
+          </property>
+         </widget>
+        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_4">
           <property name="font">
@@ -120,24 +178,6 @@
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="5">
-         <widget class="QPushButton" name="copyBtn">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>11</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>复制</string>
           </property>
          </widget>
         </item>
@@ -171,36 +211,6 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_3">
-          <property name="font">
-           <font>
-            <pointsize>11</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>到期时间：</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1" colspan="2">
-         <widget class="QDateEdit" name="dateEditExpire">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>11</pointsize>
-           </font>
-          </property>
-         </widget>
-        </item>
         <item row="4" column="3">
          <widget class="QPushButton" name="formBtn">
           <property name="minimumSize">
@@ -219,8 +229,8 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="4">
-         <widget class="QPushButton" name="tiralBtn">
+        <item row="2" column="5">
+         <widget class="QPushButton" name="copyBtn">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -233,50 +243,35 @@
            </font>
           </property>
           <property name="text">
-           <string>试用100天</string>
+           <string>复制</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_6">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_5">
           <property name="font">
            <font>
             <pointsize>11</pointsize>
            </font>
           </property>
           <property name="text">
-           <string>校验开关：</string>
+           <string>授权文件：</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
-         <widget class="QRadioButton" name="verOnBtn">
-          <property name="text">
-           <string>校验开启</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="2">
-         <widget class="QRadioButton" name="verOffBtn">
-          <property name="text">
-           <string>校验关闭</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1" colspan="4">
-         <widget class="QTextEdit" name="Sntext">
+        <item row="0" column="1" colspan="4">
+         <widget class="QTextEdit" name="lineEditFilePath">
           <property name="enabled">
            <bool>false</bool>
           </property>
-         </widget>
-        </item>
-        <item row="2" column="1" colspan="4">
-         <widget class="QTextEdit" name="actiCodeText">
-          <property name="enabled">
-           <bool>false</bool>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>80</height>
+           </size>
           </property>
          </widget>
         </item>
