--- a/FiberBox/homeWid/mainwid.ui
+++ b/FiberBox/homeWid/mainwid.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1154</width>
-    <height>731</height>
+    <height>792</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -199,7 +199,7 @@
       </string>
           </property>
           <property name="text">
-           <string>2600</string>
+           <string>260011</string>
           </property>
           <property name="placeholderText">
            <string>输入模板号或扫码...</string>
@@ -207,7 +207,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="ConfirmTpl">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -494,7 +494,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="cmbPolarityType">
+       <widget class="QLineEdit" name="txtPolarityType">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -638,7 +638,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
          </font>
         </property>
         <property name="text">
-         <string>请确认模板</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:700;&quot;&gt;请确认模板&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -650,10 +650,13 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QTabWidget" name="tabWidget">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>441</height>
+       <height>480</height>
       </size>
      </property>
      <property name="font">
